--- a/ojaarv_app/package.json
+++ b/ojaarv_app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ojaarv_app",
-  "homepage": "https://praveerpanghal.github.io/OjaArv",
+  "homepage": "https://praveerpanghal.github.io/OjaArv/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
